--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://Kysapka.github.io/Web_chat_firebase",
   "name": "kysapka_web_chat_firebase",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +14,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "firebase": "^9.0.2",
+    "firebase-admin": "^9.11.1",
+    "firebase-functions": "^3.15.5",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -28,9 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
